# SDKs

./: .gitignore  .gitmodules  BuildAndDeploy.ps1  Jenkinsfile  README.md  build.props  getsdk.ts  gulpfile.ts  index.ts  package.json  rsync-mac.list  tsconfig.json
client_connect/: Build-Arch.ps1  Build-Init.ps1  Build.ps1  CMakeLists.txt  Restore-Repo.ps1  curl-build.patch  log_c.patch  mujs.patch  patch.curl.ps1  patch.ps1
client_connect/cc_host/: CMakeLists.txt
client_connect/cc_src/: tsconfig.json  webpack.config.ts
client_connect/ccgen/: index.ts
client_connect/cchost/: CMakeLists.txt  connect.cpp  connect.h  connect.impl.cpp  connect.impl.h  embed.cpp  embed.h  embed.ps1  jsutil.cpp  jsutil.h  ue4log.h
client_connect/cchost/module/console/: module.cpp  module.h
client_connect/cchost/module/curl-native/: module.cpp  module.curl-native.cpp  module.h
client_connect/cchost/module/hotpatching/: module.cpp  module.h
client_connect/cchost/module/process/: module.cpp  module.h  module.process.cpp
client_connect/cchost/module/steam/: module.cpp  module.h
client_connect/cchost/module/timers/: module.cpp  module.h
client_connect/cchost/module/ztserver/: module.cpp  module.h
client_connect/ccsrc/: package.json  tsconfig.json  webpack.config.ts
client_connect/ccsrc/src/: hotpatch.ts  index.ts  typedarray-load.ts
client_connect/ccsrc/src/@types/client-connect/: index.d.ts
client_connect/ccsrc/src/@types/console/: index.d.ts
client_connect/ccsrc/src/@types/curl-native/: index.d.ts
client_connect/ccsrc/src/@types/hotpatching/: index.d.ts
client_connect/ccsrc/src/@types/process/: index.d.ts
client_connect/ccsrc/src/@types/steam/: index.d.ts
client_connect/ccsrc/src/@types/typedarray/: index.d.ts
client_connect/ccsrc/src/buffer/: index.ts
client_connect/ccsrc/src/curl/: index.ts
client_connect/ccsrc/src/subsystem/: auth.ts  client-connect.ts
client_connect/cctest/: CMakeLists.txt  main.cpp
client_connect/lua-curl/: lcopteasy.h  lcurl.c  lcurl.h
client_connect/lua-shim/: lua.h  luaconf.h  luashim.h
client_connect/polyfill/: getopt.c  unistd.h
client_connect/steam/: steam_api.json
client_connect/toolchain/: Linux-i386.cmake  Linux-x86_64.cmake
examples/CSharp-4.5/custom-init/: Program.cs
jenkins/: caching.groovy  gcloud.groovy  hashing.groovy
sdks/CSharp-3.5/: HiveMP.ClientConnect.csproj  HiveMP.ClientConnect.sln  HiveMP.ClientConnectWinOnly.csproj  HiveMP.NoClientConnect.csproj  HiveMP.csproj  HiveMP.sln  packages.config
sdks/CSharp-4.5/: HiveMP.ClientConnect.csproj  HiveMP.csproj  HiveMP.nuspec  HiveMP.sln
sdks/CSharp-Common/: HiveMPPromise.cs  HiveMPPromiseDelegate.cs  HiveMPPromiseDelegate_T.cs  HiveMPPromiseScheduler.cs  HiveMPPromise_T.cs
sdks/TypeScript/: package.json  readme.md  tsconfig.json
sdks/Unity/: Newtonsoft.Json-README-LICENSE.txt  README.txt  System.Net.Http.dll.mdb
sdks/UnrealEngine-4.16/: HiveMPSDK.uplugin  OnlineSubsystemHive.uplugin  README.md
sdks/UnrealEngine-4.16/Source/: HiveMPSDK.Build.cs  OnlineSubsystemHive.Build.cs
sdks/UnrealEngine-4.17/: HiveMPSDK.uplugin
sdks/UnrealEngine-4.17/Source/: HiveMPSDK.Build.cs
sdks/UnrealEngine-4.18/: HiveMPSDK.uplugin  README.md
sdks/UnrealEngine-4.19/Source/: HiveMPSDK.Build.cs
sdks/UnrealEngine-Common/: README.md
sdks/UnrealEngine-Common/Source/: HiveMPSDK.Build.cs
targets/: TargetGenerator.ts  TargetOptions.ts  csharp.ts  mujs.ts  typescript.ts  ue4.ts
targets/common/: apiNames.ts  apiSpec.ts  definition.ts  error.ts  methodSpec.ts  normalize.ts  tags.ts  typeSpec.ts
targets/cpp/: escape.ts  naming.ts
targets/csharp/: controllers.ts  error.ts  escape.ts  fragments.ts  methods.ts  namespace.ts  naming.ts  parameters.ts  return.ts  typing.ts
targets/csharp/fragments/: controllerImplementation.ts  controllerInterface.ts  defines.ts  exception.ts  httpClient.ts  methods.ts  namespace.ts  promise.ts  sdk.ts  websocket.ts
targets/csharp/typing/: array.ts  boolean.ts  byteArray.ts  float.ts  integer.ts  map.ts  object.ts  schema.ts  string.ts
targets/ts/: clients.ts  context.ts  error.ts  fragments.ts  methods.ts  namespace.ts  return.ts  typing.ts
targets/ts/fragments/: client.ts  methods.ts
targets/ts/typing/: array.ts  boolean.ts  byteArray.ts  enum.ts  float.ts  integer.ts  map.ts  object.ts  schema.ts  string.ts  timestamp.ts
targets/ue4/: definitions.ts  fragments.ts  methods.ts  namespace.ts  typing.ts  websocket.ts
targets/ue4/typing/: array.ts  boolean.ts  byteArray.ts  float.ts  integer.ts  map.ts  object.ts  schema.ts  string.ts
tests/: Build-TypeScriptTest.ps1  Build-UE4Test.ps1  Build-UE4Tests.ps1  Build-UnityPackage.ps1  Build-UnityTest.ps1  Build-UnityTests.ps1  Generate-TypeScriptTests.ps1  Generate-UE4Tests.ps1  Generate-UnityTests.ps1  Run-TypeScriptTest.ps1  Run-UE4Test.ps1  Run-UnityTest.ps1
tests/TypeScriptNodeJsTest/: index.ts  package.json  tsconfig.json
tests/UnityTest-2017.1.1f1/Assets/: RunTestsComponent.cs  TestScene.unity
tests/UnityTest-2017.1.1f1/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
tests/UnityTest-2017.2.0b10/Assets/: RunTestsComponent.cs
tests/UnityTest-2017.2.0f3/Assets/: TestScene.unity
tests/UnityTest-2017.2.0f3/ProjectSettings/: ProjectSettings.asset
tests/UnityTest-2017.3.0f3/Assets/: RunTestsComponent.cs  TestScene.unity
tests/UnityTest-2018.1.7f1/Assets/: RunTestsComponent.cs  TestScene.unity
tests/UnityTest-5.4.1f/Assets/: RunTestsComponent.cs  TestScene.unity
tests/UnityTest-5.4.1f/ProjectSettings/: ProjectSettings.asset
tests/UnityTest/Assets/: RunTestsComponent.cs  TestScene.unity
tests/UnrealTest-4.17/: UnrealTest417.uproject
tests/UnrealTest-4.19/: UnrealTest419.uproject
tests/UnrealTest-4.20/: UnrealTest420.uproject
tests/UnrealTest416/: UnrealTest416.uproject
tests/UnrealTest418/: UnrealTest418.uproject
util/: Build-UAL.ps1  Fetch-NuGet-4.5.ps1  Fetch-NuGet.ps1  License-Unity.ps1  Make-Zip.ps1  TypeScript-Package.ps1  UE4-Package.ps1  Unity-Package.ps1  Unity-PostPackage.ps1  Unity-PrePackage.ps1
(+98 files in other folders)
